# comfyui_hunyuanvideo_1.5_plugin

./: README.md  README_CN.md  __init__.py  checkpoints-download.md  node_adv.py  node_sr.py  node_util.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example_workflow/: complete_I2V_workflow.json  complete_I2V_workflow_sr.json  complete_T2V_workflow.json  complete_T2V_workflow_sr.json  simplified_I2V_workflow.json
hyvideo/commons/: __init__.py  infer_state.py  parallel_states.py
hyvideo/models/autoencoders/: hunyuanvideo_15_vae.py
hyvideo/models/transformers/: hunyuanvideo_1_5_transformer.py
hyvideo/models/transformers/modules/: attention.py
hyvideo/pipelines/: hunyuan_video_pipeline.py  hunyuan_video_sr_pipeline.py
hyvideo/utils/: infer_utils.py
hyvideo/utils/rewrite/: clients.py
