[project]
name = "hunyuanvideo_1.5_plugin"
description = "A ComfyUI plugin based on HunyuanVideo-1.5, offering both simplified and complete node sets for quick usage or deep workflow customization."
version = "1.0.3"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["tqdm==4.67.1", "torch>=2.6.0", "einops==0.8.0", "loguru==0.7.3", "numpy==1.26.4", "pillow==11.3.0", "omegaconf>=2.3.0", "torchaudio==2.6.0", "diffusers>=0.35.0", "safetensors==0.4.5", "torchvision==0.21.0", "qwen-vl-utils==0.0.8", "huggingface-hub==0.34.0", "transformers[accelerate,tiktoken]==4.56.0", "wheel", "setuptools", "modelscope", "huggingface_hub[cli]", "peft==0.17.0", "flash-attn==2.7.3"]

[project.urls]
Repository = "https://github.com/yuanyuan-spec/comfyui_hunyuanvideo_1.5_plugin"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/yuanyuan-spec/comfyui_hunyuanvideo_1.5_plugin/wiki"
"Bug Tracker" = "https://github.com/yuanyuan-spec/comfyui_hunyuanvideo_1.5_plugin/issues"

[tool.comfy]
PublisherId = "yuanyuan-spec-comfyui"
DisplayName = "HunyuanVideo-1.5 nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

